--- a/exercice5.html
+++ b/exercice5.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Les Tableaux</title>
-    <meta charset="UTF-8">
-    <style type="text/css">
+    <meta charset="UTF-8" />
+    <style type="text/css" />
       table{
         border-collapse: collapse;
       }
@@ -19,9 +19,7 @@
   </head>
   <body>
     <table>
-
       <caption>Mon compte BNP</caption>
-
       <thead>
         <tr>
           <th>Date</th>
@@ -30,14 +28,12 @@
           <th>Débit</th>
         </tr>
       </thead>
-
       <tfoot>
         <tr>
           <td colspan="2">Solde</td>
           <td colspan="2">575,40</td>
         </tr>
       </tfoot>
-
       <tbody>
         <tr>
           <td>01/05/2016</td>
